--- a/views/templates/cuestionario.ejs
+++ b/views/templates/cuestionario.ejs
@@ -7,8 +7,11 @@
         <span>Indicaciones del Cuestionario</span>
     </div>
     <div class="infolist">
-        <div class="info">1.El cuestionario consta de 5 preguntas</div>
-        <div class="info">2.Tiene 30 segundos por pregunta</div>
+        <div class="info">1.El cuestionario consta de 5 preguntas.</div>
+        <div class="info">3.La complejidad de las preguntas es acorde a la dificultad del cuestinario seleccionado.</div>
+        <div class="info">3.Cada pregunta puntua 1 punto.</div>
+        <div class="info">2.El cuestionario es secuencial, no se puede regresar a la pregunta anterior.</div>
+        <div class="info">4.Tiene 60 segundos para responder cada pregunta.</div>
     </div>
     <div class="buttons">
         <button class="quit">Salir del cuestionario</button>
