Mas estilos a la seccion foros

--- a/views/foro.ejs
+++ b/views/foro.ejs
@@ -5,11 +5,11 @@
 <div class="mainforum">
     <div class="forum">
     <form method="post" class="formforo">
-        <h1 class="titfo">Agrega un Foro</h1>
-        Autor: <input type="text" placeholder="Autor" class="formatinput" id="author" name="author">        
-        Titulo: <input type="text" placeholder="Titulo"class="formatinput" id="Titulo" name="Titulo">
-        Descripcion: <input type="text" placeholder="Descripcion" class="formatinput" id="contenido" name="contenido">
-        <button type="submit" class="btnForo">Agregar Foro</button>  
+        <h1 class="titfo">Agrega un Tema!</h1>
+        <label>Autor: </label> <input type="text" placeholder="Autor" class="formatinput" id="author" name="author">        
+        <label>Titulo: </label> <input type="text" placeholder="Titulo"class="formatinput" id="Titulo" name="Titulo">
+        <label>Descripcion: </label> <textarea type="text" placeholder="Descripcion" id="contenido" name="contenido" class="formatextarea"></textarea>
+        <button type="submit" class="btnForo">Agregar</button>  
     </form>
 </div>
 </div>
