--- a/public/css/foro.css
+++ b/public/css/foro.css
@@ -43,19 +43,12 @@
 }
 
 .titfo{
-    color: blue;
+    color: #242434;
+    font-size: 150%;
     text-align: center;
-    margin: 2px;
+    margin-top: 2px;
+    margin-bottom: 5px;
     font-size: 25px;
-}
-
-.formatinput{
-    width: 100%;
-    margin-bottom: 10px;
-    padding: 7px;
-    box-sizing: border-box;
-    font-size: 15px;
-    background-color: #242434;
 }
 
 /*Seccion dentro de foro*/
@@ -96,9 +89,12 @@
 .seccioncomentarios .mensajes .contentmessage{
     text-align: justify;
     padding: 5px;
+    word-wrap: break-word;
+    margin: 2px;
 }
 
 .btnComment{
+    margin-top: 5px;
     background-color: #242434;
     border-color:#242434;
     border-radius: 10px;
@@ -120,6 +116,7 @@
 }
 
 .btnForo{
+    margin-top: 5px;
     background-color: #242434;
     border-color:#242434;
     border-radius: 10px;
@@ -143,9 +140,51 @@
 .top-bar h1{
     margin-top: 20px;
     color: #242434;
+    font-size: 200%;
+    margin-left: 50px;
+}
+
+.top-bar h2{
+    margin-top: 10px;
     font-size: 150%;
     margin-left: 50px;
 }
+
+.top-bar h3{
+    margin-top: 10px;
+    font-size: 100%;
+    margin-left: 50px;
+}
+
+/*Diseño de Inputs*/
+
+.formatinput{
+    display: block;
+    width: 100%;
+    padding: 12px 20px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    text-align: justify;
+    font-size: 15px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.formatextarea{
+    display: block;
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    text-align: justify;
+    font-size: 15px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    resize: none; /*Impide que el textarea se pueda redimnensionar*/
+}
+
+
 /*Responsive*/
 
 @media(max-width:900px){
@@ -162,10 +201,8 @@
         word-wrap: break-word;
     }
 
-    .seccioncomentarios .mensajes{
+    .seccioncomentarios .mensajes .contentmessage{
         width: 100%;
         word-wrap: break-word;
     }
 }
-
-
