ajustes foro e iconos reacciones

--- a/views/termycondi.ejs
+++ b/views/termycondi.ejs
@@ -1,27 +1,25 @@
 <%- include("templates/head",{ruta:'/css/termycond.css',title:'Terminos y Condiciones phpfordevs'}) %>
 
     <!--Contenido-->
-    <h1 class="titulo2">Terminos y condiciones</h1>
+    <h1 class="titulo2">Términos y Condiciones</h1>
 
     <div class="contenedorTC">
 
-        <p class="parrafoTC">El presente contrato describe los términos y condiciones aplicables al uso del contenido,
-            productos y/o servicios del sitio web PHPFORDEVS del cual es titular Grupo 05. Para hacer uso del contenido,
-            productos y/o servicios del sitio web el usuario deberá
-            sujetarse a los presentes términos y condiciones. </p>
+        <p class="parrafoTC">El presente contrato describe los términos y condiciones aplicables al uso del contenido
+            del sitio web PhpForDevs del cual es titular Grupo 05. Para hacer uso del contenido
+            del sitio web el usuario deberá sujetarse a los presentes términos y condiciones. </p>
     </div>
     <h2 class="titulo">I. OBJETO</h2>
     <div class="contenedorTC">
         <p class="parrafoTC">El titular se reserva el derecho de realizar cualquier tipo de modificación en el sitio web
             en cualquier momento y sin previo aviso, el usuario acepta dichas modificaciones. El acceso al sitio web por
             parte del usuario es libre y gratuito, la utilización del
-            contenido, productos y/o servicios no implica un costo de suscripción para el usuario. El sitio web solo
+            contenido no implica un costo de suscripción para el usuario. El sitio web solo
             admite
-            el acceso a personas mayores de edad y no se hace responsable por
-            el incumplimiento de esto. Si el usuario reside en otro país y decide acceder al sitio web lo hará bajo su
+            el acceso a personas que desean aprender y reforzar sus conocimientos en Php. 
+            Si el usuario reside en otro país y decide acceder al sitio web lo hará bajo su
             responsabilidad.
-            La administración del sitio web puede ejercerse por terceros, es decir, personas distintas
-            al titular, sin afectar esto los presentes términos y condiciones. </p>
+            </p>
     </div>
 
     <h2 class="titulo">II.USUARIO</h2>
@@ -29,18 +27,15 @@
         <p class="parrafoTC">La actividad del usuario en el sitio web como publicaciones o comentarios estarán sujetos a
             los presentes términos y condiciones. El usuario se compromete a proporcionar información verídica en los
             formularios del sitio
-            web. El acceso al sitio web no supone una relación entre el usuario y el titular del sitio web. El usuario
-            manifiesta ser mayor de edad y contar con la capacidad jurídica de acatar los
-            presentes términos y condiciones. </p>
+            web. El acceso al sitio web no supone una relación entre el usuario y el titular del sitio web. </p>
     </div>
 
-    <h2 class="titulo">III.ACCESO Y NAVEGACIÒN EN EL SITIO WEB</h2>
+    <h2 class="titulo">III.ACCESO Y NAVEGACIÓN EN EL SITIO WEB</h2>
     <div class="contenedorTC">
-        <p class="parrafoTC">El titular no garantiza la continuidad y disponibilidad del contenido, productos y/o
-            servicios en el sitito web, realizará acciones que fomenten el buen funcionamiento de dicho sitio web sin
+        <p class="parrafoTC">El titular no garantiza la continuidad y disponibilidad del contenido
+             en el sitio web, realizará acciones que fomenten el buen funcionamiento de dicho sitio web sin
             responsabilidad alguna. El titular no se responsabiliza de que el software esté libre de errores que puedan
-            causar
-            un daño al software y/o hardware del equipo del cual el usuario accede al sitio web. De igual forma, no se
+            causar un daño al software y/o hardware del equipo del cual el usuario accede al sitio web. De igual forma, no se
             responsabiliza por los daños causados por el acceso y/o utilización del sitio web. </p>
     </div>
 
@@ -50,7 +45,7 @@
             usuario, evitando que se haga uso indebido de los datos personales que el usuario proporcione en el sitio
             web. El titular corroborará que los datos personales contenidos en las bases de datos sean
             correctos, verídicos y actuales, así como que se utilicen únicamente con el fin con el que fueron recabados.
-            PHPFORDEVS se reserva el derecho de realizar cualquier tipo de modificación en el Aviso de
+            PhpForDevs se reserva el derecho de realizar cualquier tipo de modificación en el Aviso de
             Privacidad en cualquier momento y sin previo aviso, de acuerdo con sus necesidades o cambios en la
             legislación aplicable, el usuario acepta dichas modificaciones. El sitio web implica la utilización de
             cookies que son pequeñas cantidades de información
@@ -66,10 +61,10 @@
     <h2 class="titulo">V.POLÍTICA DE ENLACES</h2>
     <div class="contenedorTC">
         <p class="parrafoTC">En el sitio web puede contener enlaces a otros sitios de internet pertenecientes a terceros
-            de los cuales no se hace responsable de los daños que este puee causar. </p>
+            de los cuales no se hace responsable de los daños que este puede causar. </p>
     </div>
 
-    <h2 class="titulo"> VI.POLÌTICA DE PROPIEDAD INTELECTUAL E INDUSTRIAL</h2>
+    <h2 class="titulo"> VI.POLÍTICA DE PROPIEDAD INTELECTUAL E INDUSTRIAL</h2>
     <div class="contenedorTC">
         <p class="parrafoTC">El titular manifiesta tener los derechos de propiedad intelectual e industrial del sitio
             web incluyendo imágenes, archivos de audio o video, logotipos, marcas, colores, estructuras, tipografías,
@@ -79,10 +74,10 @@
             exclusivamente para uso personal. </p>
     </div>
 
-    <h2 class="titulo">VII.LEGISLACIÒN Y JURISDICCIÒN APLICABLE</h2>
+    <h2 class="titulo">VII.LEGISLACIÓN Y JURISDICCIÓN APLICABLE</h2>
     <div class="contenedorTC">
         <p class="parrafoTC">La relación entre el usuario y el titular se regirá por las legislaciones aplicables en El
-            Salvador. PHPFORDEVS no se responsabiliza por la indebida utilización del contenido, productos y/o
-            servicios del sitio web y del incumplimiento de los presentes términos y condiciones. </p>
+            Salvador. PhpForDevs no se responsabiliza por la indebida utilización del contenido
+            del sitio web y del incumplimiento de los presentes términos y condiciones. </p>
     </div>
     <%- include("templates/footer") %>
