--- a/public/css/watchvideo.css
+++ b/public/css/watchvideo.css
@@ -1,3 +1,8 @@
-body {
-  background-color: black;
+.videotitle{
+  text-align: center;
+}
+.container-watch{
+  display: flex;
+  justify-content: space-between;
+  padding: 1.5rem;
 }
