--- a/views/videos.ejs
+++ b/views/videos.ejs
@@ -14,7 +14,7 @@
                         </div>
                         <div class="videoinfo">
                             <strong class="title">
-                                <%= data[i].titulo %>
+                                <%=data[i].cod%>.<%= data[i].titulo %>
                             </strong>
                             <p class="descripcion">en este video se trabaja sobre el crud en php para la creacion de un
                                 listado de tareas</p>
