--- a/public/css/watchvideo.css
+++ b/public/css/watchvideo.css
@@ -1,8 +1,67 @@
-.videotitle{
+.videotitle {
   text-align: center;
 }
-.container-watch{
+.container-watch {
   display: flex;
   justify-content: space-between;
-  padding: 1.5rem;
 }
+.flex {
+  display: flex;
+}
+.sidebar-videos {
+  background-color: #242434;
+  width: 15rem;
+  transition: all 0.5s ease;
+}
+.sidebar-videos .nav-links {
+  height: 100%;
+  width: 100%;
+  padding-top: 3rem;
+}
+.sidebar-videos .nav-links li {
+  position: relative;
+  list-style: none;
+}
+.sidebar-videos .nav-links li i {
+  height: 5rem;
+  min-width: 7rem;
+  text-align: center;
+  line-height: 5rem;
+  color: #ffffff;
+}
+.sidebar-videos .nav-links li a {
+  align-items: center;
+}
+.sidebar-videos .nav-links li a .title {
+  font-size: 18px;
+  font-weight: 400;
+  color: #ffffff;
+}
+.home-section {
+  position: relative;
+  color: #ffffff;
+  left: -4rem;
+  height: 0;
+  transition: all 0.5s ease-out;
+}
+.sidebar-videos.close ~ .home-section {
+  left: 2rem;
+  width: calc(100% - 4rem);
+  color: #242434;
+}
+
+.home-section .home-content {
+  font-weight: 600;
+  height: 60px;
+  display: flex;
+  align-items: center;
+}
+.home-section .home-content i {
+  font-size: 28px;
+}
+.close {
+  display: none;
+}
+/* .watch {
+  margin-right: 9rem;
+} */
