--- a/public/css/acerNosotros.css
+++ b/public/css/acerNosotros.css
@@ -15,7 +15,7 @@
     font-size: 16px;
     border-radius: 30px;
     width: 40%;
-
+    line-height : 25px;
     display:flex;
     flex-direction: column;
     flex-wrap: wrap;
