--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -16,6 +16,7 @@
   <meta name="keywords" content="phpfordevs, php, devs" />
   <meta name="description" content="phpfordevs" />
   <link rel="stylesheet" type="text/css" href="/css/main.css" />
+  <link rel="shortcut icon" href="/img/icono.jpg">
   <% if(ruta !='' ) {%>
     <link rel="stylesheet" type="text/css" href="<%= ruta %>" />
     <%}%>
