--- a/views/thread.ejs
+++ b/views/thread.ejs
@@ -22,9 +22,9 @@
     <% for(let i=0; i<data.length;i++){ %>
         <div class="seccioncomentarios">
             <div class="mensajes">
-                <div class="contentmessage" >Autor: <%= data[i].usuario_res%></div>
-                <div class="contentmessage">Respuesta: <%= data[i].descripcion_res%></div>
-                <div class="contentmessage">Fecha de publicacion: <%= data[i].fecha_coment%></div>
+                <div class="contentmessage" ><p>Autor: <%= data[i].usuario_res%></p></div>
+                <div class="contentmessage"><p>Respuesta: <%= data[i].descripcion_res%></p></div>
+                <div class="contentmessage"><p>Fecha de publicacion: <%= data[i].fecha_coment%></p></div>
                 <div class="contentmessage"><i class="far fa-thumbs-up"></i><%= data[i].ayuda%> 
                                             <i class="far fa-thumbs-down"></i> <%= data[i].noayuda%></div>
             </div>
