--- a/public/css/foro.css
+++ b/public/css/foro.css
@@ -148,18 +148,21 @@ p{
     color: #242434;
     font-size: 200%;
     margin-left: 50px;
+    margin-right: 50px;
 }
 
 .top-bar h2{
     margin-top: 10px;
     font-size: 150%;
     margin-left: 50px;
+    margin-right: 50px;
 }
 
 .top-bar h3{
     margin-top: 10px;
     font-size: 100%;
     margin-left: 50px;
+    margin-right: 50px;
 }
 
 /*Diseño de Inputs*/
@@ -206,10 +209,12 @@ p{
     .ForosPrueba .Foros div{
         width: 100%;
         word-wrap: break-word;
+        text-align: left;
     }
 
     .seccioncomentarios .mensajes .contentmessage{
         width: 100%;
         word-wrap: break-word;
+        text-align: left;
     }
 }
