--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
                 </a>
             </div>
             <div class="cuadrados">
-                <p class="textoimagen">Bienvenidos a PhpForDevs</p>
+                <p class="textobienvenida">Bienvenidos a PhpForDevs</p>
                 <img src="/img/bienvenidos.png" width="60%" height="80%">
             </div>
             <div class="cuadrados">
@@ -27,7 +27,7 @@
                 </a>
             </div>
             <div class="cuadradosT" >
-                <p">"Inserte su eslogan aqui"</p>
+                <p">"Somos PhpForDevs, màs que una pagina de enseñanzas sobre PHP, somos tu mejor aliado en tu camino de aprendizaje"</p>
             </div>
             <div class="cuadrados">
                 <a href="/foro">
