--- a/views/templates/navbar.ejs
+++ b/views/templates/navbar.ejs
@@ -13,7 +13,7 @@
                 <ul>
                     <li><a href="/" class="activado"><i class="fas fa-home"></i> Home</a></li>
                     <li><a href="/cursos">Cursos</a></li>
-                    <li><a href="#">Editor y compilador</a></li>
+                    <li><a href="/ejemplos">Ejemplos</a></li>
                     <li><a href="/cuestionarios">Cuestionarios</a></li>
                     <li><a href="/foro">Foro</a></li>
                     <li><a href="/contactanos">Contactanos</a></li>
