--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,8 +21,8 @@
         </div>
         <div class="general-linea">
             <div class="cuadrados">
-                <a href="#">
-                    <p class="textoimagen">Editor y compilador</p>
+                <a href="/ejemplos">
+                    <p class="textoimagen">Ejemplos</p>
                     <img src="/img/phplogo.png" width="60%" height="75%" alt="Gato" >
                 </a>
             </div>
