--- a/public/css/acerNosotros.css
+++ b/public/css/acerNosotros.css
@@ -35,4 +35,22 @@ p{
     text-align: justify;
 }
 
-
+@media(max-width:900px){
+    .nosotros{
+        margin: 3%;
+        display: flex;
+    }
+    .nosotros .mvi{
+        padding: 5%;
+        border-radius: 20px;
+        width: 100%;
+        margin: 5%;
+    }
+    .mvi .img{
+        padding: 5%;
+        border-radius: 20px;
+        width: 100%;
+        height: 100%;
+        margin: 5%;
+    }
+}
