--- a/public/css/cuestionario.css
+++ b/public/css/cuestionario.css
@@ -413,6 +413,13 @@ footer .nextbtn.show{
     width: 100%;
     border-radius: 5px;
 }
+.preguntaimg{
+    height: 90px;
+    width: 40%;
+    border-radius: 5px;
+    margin-left: 30%;
+    margin-right: 50%;
+}
 
 @media(max-width:900px){
     .contenedorCuestionario{
@@ -512,5 +519,10 @@ footer .nextbtn.show{
         height: 40px;
         width: 100%;
         border-radius: 5px;
+    }
+    .preguntaimg{
+        width: 100%;
+        margin-left: 0%;
+        margin-right: 0%;
     }
 }
