--- a/public/css/acerNosotros.css
+++ b/public/css/acerNosotros.css
@@ -37,6 +37,10 @@ h3{
 p{
     text-align: justify;
 }
+img{
+
+    border-radius: 15px;
+}
 
 @media(max-width:900px){
     .nosotros{
@@ -58,5 +62,11 @@ p{
         width: 100%;
         height: 100%;
         margin: 5%;
+    }
+
+    img{
+        height: 27em;
+        width: 100%;
+        border-radius: 15px;
     }
 }
