--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<%- include("templates/head",{ruta:'',title:'phpfordevs'}) %>
+<%- include("templates/head",{ruta:'',title:'phpfordevs',}) %>
 <div class="cuerpo">
     <div class="general">
         <div class="general-linea">
