--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,27 @@
 <h1>Login</h1>
 <div class="loginform">
     <!--Inicio de Sesion-->
-    <form action="" method="POST">
+    <form action="/auth" method="POST">
         <input type="text" name="user" id="user" placeholder="Usuario">
         <input type="password" name="pass" id="pass" placeholder="Constraseña">
         <input type="submit" value="login">
     </form>
     <!--En caso de registro-->
     <a href="/register">Registrate!</a>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <% if(typeof alert !="undefined" ){%>
+        <script>
+            Swal.fire({
+                title: '<%= alertTitle%>',
+                text: '<%= alertMessage%>',
+                icon: '<%= alertIcon%>',
+                showConfirmButton: <%= showConfirmButton%>,
+                timer: <%= time %>
+
+            }).then(() => {
+                    window.location = '/<%=ruta%>'
+                })
+
+        </script>
+        <%}%>
 </div>
