--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,11 +1,27 @@
 <h1>Registro</h1>
 <div class="registerform">
     <!--Registro de usuario-->
-    <form action="register" method="POST">
+    <form action="/register" method="POST">
         <input type="text" name="user" id="user" placeholder="Usuario">
         <input type="password" name="pass" id="pass" placeholder="Constraseña">
         <input type="submit" value="registro">
     </form>
     <!--En caso de no querer registrarse-->
     <a href="/login">Cancelar registro</a>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <% if(typeof alert !="undefined" ){%>
+        <script>
+            Swal.fire({
+                title: '<%= alertTitle%>',
+                text: '<%= alertMessage%>',
+                icon: '<%= alertIcon%>',
+                showConfirmButton: <%= showConfirmButton%>,
+                timer: <%= time %>
+
+            }).then(() => {
+                    window.location = '/<%=ruta%>'
+                })
+
+        </script>
+        <%}%>
 </div>
