--- a/views/acercaDNosotros.ejs
+++ b/views/acercaDNosotros.ejs
@@ -2,41 +2,49 @@
 
 <!--Contenido-->
 <title>Acerca de Nosotros</title>
+<div class="cuerpo">
+    <h1>Acerca de Nosotros</h1>
 
 <div class="nosotros">
     <div class="mvi">
-        <div class="quienesSomos">
-            <h3>Historia</h3>
-            <p>
-                <strong>PhpForDevs</strong>, es una página creada por estudiantes de la Facultad de <strong>Ingeniería de Sistemas Informáticos</strong> de la <strong>Universidad de El Salvador</strong>, con la intención principal de brindar conocimiento y ayuda a usuarios en la web interesados en el lenguaje de programación PHP.
-            </p>
-        </div>
-        <div class="mision">
-            <h3>Misión</h3>
-            <p>Desarrollar un sitio web como herramienta para el aprendizaje del lenguaje de programación <strong>PHP</strong> que funcione como guía didáctica para programadores intermedios y avanzados.
-            </p>
-        </div>
-        <div class="vision">
-            <h3>Visión</h3>
-            <p>
-                Posicionarse como líderes en dar solución de manera precisa y delimitada a los problemas de aprendizaje del lenguaje de programación <strong>PHP</strong> para programadores intermedios o avanzados. 
-            </p>
-        </div>
-        <div class="integrantes">
-            <h3>Equipo</h3>
-            <h4>Miguel Ángel Amaya Rodriguez</h4>
-            <h4>Christian Javier Ayala Guerra</h4>
-            <h4>Diego José Ayala Guerra</h4>
-            <h4>Luis Alonso Cornejo Delgado</h4>
-            <h4>Carolina Isabel Pineda Delgado</h4>
-            <h4>José Gustavo Pineda Delgado</h4>
-            <h4>William Enrique Vásquez Mancía</h4>
+        <div class="arreglo">
+            <div class="im">
+                <img src="/img/EISI.png">
+            </div>
+            <div class="quienesSomos">
+                <h3>Historia</h3>
+                <p>
+                    <strong>PhpForDevs</strong>, es una página creada por estudiantes de la Facultad de <strong>Ingeniería de Sistemas Informáticos</strong> de la <strong>Universidad de El Salvador</strong>, con la intención principal de brindar conocimiento y ayuda a usuarios en la web interesados en el lenguaje de programación PHP.
+                </p>
+            </div>
+            <div class="mision">
+                <h3>Misión</h3>
+                <p>Desarrollar un sitio web como herramienta para el aprendizaje del lenguaje de programación <strong>PHP</strong> que funcione como guía didáctica para programadores intermedios y avanzados.
+                </p>
+            </div>
+            <div class="vision">
+                <h3>Visión</h3>
+                <p>
+                    Posicionarse como líderes en dar solución de manera precisa y delimitada a los problemas de aprendizaje del lenguaje de programación <strong>PHP</strong> para programadores intermedios o avanzados. 
+                </p>
+            </div>
+            <div class="integrantes">
+                <h3>Equipo</h3>
+                <p>Miguel Ángel Amaya Rodriguez</p>
+                <p>Christian Javier Ayala Guerra</p>
+                <p>Diego José Ayala Guerra</p>
+                <p>Luis Alonso Cornejo Delgado</p>
+                <p>Carolina Isabel Pineda Delgado</p>
+                <p>José Gustavo Pineda Delgado</p>
+                <p>William Enrique Vásquez Mancía</p>
+            </div>
         </div>
     </div>
     <div class="img">
         <img src="/img/EISI.png">
     </div>
 
+</div>
 </div>
 
 <%- include("templates/footer") %>
