--- a/views/termycondi.ejs
+++ b/views/termycondi.ejs
@@ -1,6 +1,7 @@
 <%- include("templates/head",{ruta:'/css/termycond.css',title:'Terminos y Condiciones phpfordevs'}) %>
 
     <!--Contenido-->
+<div class="contenedor">
     <h1 class="titulo2">Términos y Condiciones</h1>
 
     <div class="contenedorTC">
@@ -80,4 +81,5 @@
             Salvador. PhpForDevs no se responsabiliza por la indebida utilización del contenido
             del sitio web y del incumplimiento de los presentes términos y condiciones. </p>
     </div>
+</div>
     <%- include("templates/footer") %>
