--- a/public/css/acerNosotros.css
+++ b/public/css/acerNosotros.css
@@ -1,68 +1,100 @@
-.nosotros{
+.cuerpo{
+
     margin: 3%;
     padding: 0%;
+
+}
+.nosotros{
+    margin: 0%;
+    padding: 0%;
+
     display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
 }
 .quienesSomos, .mision, .vision, .integrantes{
-    margin-bottom: 20px;
+    margin-bottom: 3%;
 }
 .nosotros .mvi{
     
-    padding: 2%;
     color:#000000;
     font-size: 16px;
-    border-radius: 30px;
-    width: 40%;
-    line-height : 25px;
+    width: 50%;
+    
     display:flex;
     flex-direction: column;
-    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
 
 }
 
-.integrantes{
+.integrantes p{
     text-align: center;
+    line-height : 25px;
 }
 h3{
-    color: #242434;
-    font-size: 150%;
     text-align: center;
+    color:#2d2d50;
+}
+
+h1{
+    text-align: center;
+    color:#11112c;
+    font-size: 40px;
+    font-weight: bold;
+    margin-bottom: 2%;
+    padding: 0%;
 }
 p{
     text-align: justify;
+    line-height : 25px;
+}
+.img{
+    width: 40%;
+}
+.im{
+    width: 0%;
+    height: 0%;
+    visibility: hidden;
 }
 img{
 
     border-radius: 15px;
+    width: 100%;
+    height: 100%;
 }
 
 @media(max-width:900px){
-    .nosotros{
-        margin: 3%;
-        display: flex;
+   .cuerpo{
+        padding: 5%;
+        margin: 5%;
+        display:flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: center;
     }
     .nosotros .mvi{
-        padding: 5%;
-        border-radius: 20px;
         width: 100%;
-        margin: 5%;
     }
-    .quienesSomos, .mision, .vision, .integrantes{
-        margin-bottom: 10px;
+    .img{
+        width: 0%;
+        height: 0%;
+        visibility: hidden;
     }
-    .nosotros .img{
-        padding: 5%;
-        border-radius: 20px;
+    .im{
         width: 100%;
-        height: 100%;
-        margin: 5%;
+        visibility: visible;
+        margin-bottom: 2%;
     }
-
     img{
-        height: 100%;
-        width: 100%;
+    
         border-radius: 15px;
+        width: 100%;
+        height: 100%;
     }
+    
+
 }
