--- a/views/templates/navbar.ejs
+++ b/views/templates/navbar.ejs
@@ -17,6 +17,7 @@
                     <li><a href="/cuestionarios">Cuestionarios</a></li>
                     <li><a href="/foro">Foro</a></li>
                     <li><a href="/contactanos">Contactanos</a></li>
+                    <li><a href="/register">Registrarse</a></li>
                 </ul>
             </nav>
         </div>
